# Engine

./: .gitignore  CMakeLists.txt  meson.build
libs/smolv/: download-latest.sh
src/: Version.h  Version.h.in  main.cpp
src/shaders/: shader-compile.sh  triangle.slang
subprojects/: .gitignore
